# Sleep-detector

./: .gitignore  CHANGELOG.md  EVALUATION.md  LICENSE  README.md  detect_sleep.py  download_model.py  pyproject.toml  requirements.txt
tests/: test_detect_sleep.py
